# orders-control

./: .coverage  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 17bf17ac0960_create_users_table.py  6a2afc1a67bf_products_table.py  7a51fec507e0_.py  db298f5d67c1_add_name_and_profile_columns.py  f564851c127b_.py
src/: database.py  main.py  security.py
src/models/: auth_model.py  client_model.py  order_model.py  products_model.py
src/routers/: auth_route.py  auth_routes.py  client_routes.py  orders_routes.py  products_routes.py  user_route.py
src/schemas/: auth_schema.py  client_schema.py  order_schema.py  products_schema.py  user_schema.py
src/services/: security.py
src/settings/: settings.py
src/utils/: _cloudinary.py  cloudinary_upload.py  cpf_validator.py
tests/: conftest.py  test_auth.py  test_clients.py  test_db.py  test_main.py  test_security.py
